# dwriter

./: .gitignore  DEV-and-CONFIG.md  GEMINI.md  HEADLESS-README.md  HISTORY.md  README.md  USE_CASES.md  create-python-project.sh  debug_run.py  dwriter.db  dwriter.db.20260408210542.bak  pyproject.toml  test_colors.py  test_regex.py  test_regex2.py  test_regex3.py  test_rich.py  test_tabs.py  test_tui.py
.agents/: AGENT.md  FRAMEWORK.md  HISTORY.md
agents/: AGENTS.md  FRAMEWORK.md  HISTORY.md  PORTING_MANIFEST.md
completions/: day.bash  day.zsh  dwriter.bash  dwriter.zsh
documentation/: 2ND-BRAIN-GUIDE.md  DEV-and-CONFIG.md  HEADLESS-README.md  USER-MANUAL.md  USE_CASES.md  dev-config.md  development-history.md  headless-readme.md  sync-guide.md  update-notes.md  user-manual.md
scripts/: check_guards.sh
src/dwriter/: __init__.py  analytics.py  cli.py  config.py  database.py  database_entry_repo.py  database_migrations.py  database_models.py  database_todo_repo.py  date_utils.py  git_utils.py  mcp_server.py  search_utils.py  stats_utils.py  ui_utils.py
src/dwriter/ai/: compression.py  engine.py  fact_extractor.py  permissions.py  proactive.py  summarizer.py  tools.py
src/dwriter/ai/schemas/: __init__.py  extraction.py  reflection.py  router.py  tasks.py  triage.py
src/dwriter/analytics/: __init__.py  engine.py  insights.py
src/dwriter/commands/: __init__.py  add.py  ask.py  compress.py  config.py  dashboard_tui.py  delete.py  edit.py  edit_tui.py  examples.py  examples_tui.py  focus.py  focus_tui.py  graph.py  help.py  help_tui.py  mcp.py  notifications.py  review.py  search.py  search_tui.py  standup.py  standup_service.py  stats.py  sync.py  timer.py  timer_tui.py  today.py  todo.py  todo_tui.py  undo.py
src/dwriter/commands/todo/: __init__.py  _group.py  _helpers.py  add.py  done.py  edit.py  list.py  remind.py  rm.py  snooze.py
src/dwriter/export/: obsidian.py
src/dwriter/graph/: __init__.py  projector.py  schema.py  search.py
src/dwriter/sync/: coordinator.py  daemon.py  engine.py
src/dwriter/tui/: __init__.py  ai_handlers.py  app.py  app.tcss  app_omnibox.py  colors.py  command_palette.py  messages.py  parsers.py  reminder_coordinator.py  themes.py  todo_workflow.py
src/dwriter/tui/screens/: __init__.py  briefing_modals.py  configure.py  dashboard.py  help_tui.py  logs.py  search.py  second_brain.py  standup.py  timer.py  todo.py
src/dwriter/tui/widgets/: __init__.py  clock.py  insights.py  omnibox.py
stitch/dwriter_dashboard_v11/: code.html
stitch/dwriter_logs_v14_unified/: code.html
stitch/dwriter_standup_v19_full_ui/: code.html
stitch/dwriter_timer_v2_btop_style/: code.html
stitch/mono_terminal_zero/: DESIGN.md
tests/: __init__.py  conftest.py  test_ai_compression.py  test_ai_sanitization.py  test_ai_tools.py  test_analytics_graph.py  test_cli.py  test_config.py  test_database.py  test_date_utils.py  test_fact_extractor.py  test_formatters.py  test_graph.py  test_obsidian_export.py  test_parsers.py  test_stats.py  test_summarizer.py  test_sync.py  test_todo.py
