[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dwriter"
version = "3.7.0"
description = "A low-friction terminal journaling tool for tracking daily tasks and generating standup summaries"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "dwriter Contributors"}
]
keywords = ["journal", "standup", "cli", "productivity", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "tomlkit>=0.11",
    "pyperclip>=1.8",
    "sqlalchemy>=2.0",
    "rich>=13.0",
    "rapidfuzz>=3.0",
    "textual>=0.44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "types-pyperclip>=1.6",
    "tomli>=2.0; python_version<'3.11'",
]

[project.scripts]
dwriter = "dwriter.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/dwriter"
Repository = "https://github.com/yourusername/dwriter"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "B", "C4", "UP"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Relax docstring requirements and allow long strings for TUI components (verbose UI code)
"src/dwriter/commands/*_tui.py" = ["D102", "D107", "E501", "W293"]
"src/dwriter/tui/screens/*.py" = ["D102", "D107", "E501", "W293", "E701", "W291"]
"src/dwriter/tui/app.py" = ["E501"]
# Tests don't need docstrings
"tests/**/*.py" = ["D100", "D101", "D102", "D103", "D107"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=dwriter"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
